--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="coaching_name">RLB and ER-DR</string>
+    <string name="spinner_title">select_branch</string>
+    <string name="spinner_title_class">Select Class</string>
 </resources>
